Fix welcome and services section interface on mobile divice

--- a/assets/style.css
+++ b/assets/style.css
@@ -118,7 +118,7 @@ main {
   align-items: center;
   justify-content: space-around;
   padding: 10% 72px;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .hero-items {
@@ -559,4 +559,64 @@ footer div {
     transform: rotate(45deg) translate(-5px, -6px);
   }
   /* END OF NAVBAR */
+
+  /* HERO */
+  #welcome-section {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20% 24px;
+    /* height: 100vh; */
+  }
+
+  .hero-items {
+    flex: 50%;
+    min-width: 50%;
+    padding: 24px 0;
+  }
+
+  #hero-text h1 {
+    font-size: 42px;
+  }
+  #hero-text p {
+    margin: 24px 0;
+  }
+  /* END OF HERO */
+
+  /* SERVICES */
+  #services {
+    padding: 10% 24px;
+  }
+
+  .service-headline {
+    text-align: center;
+    padding: 0;
+  }
+  .service-headline h2 {
+    font-size: 32px;
+  }
+
+  .service-summary {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 24px 0;
+    margin-top: 0;
+  }
+  .service-summary .card {
+    flex: 100%;
+    max-width: 100%;
+    padding: 24px 32px;
+    margin: 0;
+    margin-top: 100px !important;
+    color: var(--white);
+    background-color: var(--secDarkBg);
+    text-align: center;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  /* END OF SERVICES */
 }
